<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">電卓</string>
    <string name="action_settings">Settings</string>
    <string name="disp">0</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="sum">+</string>
    <string name="diff">-</string>
    <string name="product">×</string>
    <string name="quote">÷</string>
    <string name="equal">=</string>
    <string name="period">.</string>
    <string name="clear">C</string>
    <string name="back">←</string>

</resources>
